links for projects added

--- a/AngularApp/src/app/main/main.component.html
+++ b/AngularApp/src/app/main/main.component.html
@@ -88,30 +88,39 @@
     <div class="tile is-vertical has-text-centered">
         <div class="tile">
           <div class="tile is-parent">
-            <div id="money-coach-tile" class="tile is-child notification">
-              <div class="level-item project">
-                <p class="title has-text-white">Money Coach</p>              
-              </div>
-            </div>
+            <a href="https://github.com/eclairebenn/Money-Coach" target="_blank" >
+              <div id="money-coach-tile" class="tile is-child notification">
+                <div class="level-item project">
+                  <p class="title has-text-white">Money Coach</p>              
+                </div>
+              </div>              
+            </a>
+
           </div>
           <div class="tile is-parent">
-            <div id="big-boss-tile" class="tile is-child notification">
-              <div class="level-item project">
-                <p class="title has-text-white">Big Boss</p>  
-              </div>
-            </div>
+            <a href="https://github.com/eclairebenn/Big-Boss" target="_blank">
+              <div id="big-boss-tile" class="tile is-child notification">
+                <div class="level-item project">
+                  <p class="title has-text-white">Big Boss</p>  
+                </div>
+              </div>              
+            </a>
+
           </div>
         </div>
         <div class="tile is-parent">
-          <div id="smart-tourist-tile" class="tile is-child notification">
-            <div class="level-item project">
-              <p class="title has-text-white">Smart Tourist</p>
-              <div class="content">
-                <!-- Content -->
-              </div>              
-            </div>
+          <a href="https://github.com/NickcCosby/SmartTourist" target="_blank">
+            <div id="smart-tourist-tile" class="tile is-child notification">
+              <div class="level-item project">
+                <p class="title has-text-white">Smart Tourist</p>
+                <div class="content">
+                  <!-- Content -->
+                </div>              
+              </div>
 
-          </div>
+            </div>            
+          </a>
+
         </div>
       </div>
 
